<resources>
    <string name="app_name">Movies</string>
    <string name="yearHead">Год:</string>
    <string name="titleHead">Название:</string>
    <string name="imagemovie">Постер фильма</string>
    <string name="home">Тренды</string>
    <string name="categories">Жанры</string>
    <string name="raiting">Мои оценки</string>
    <string name="about">О программе</string>
    <string name="help">Справка</string>
    <string name="find">Найти</string>
    <string name="logo">Logo</string>
    <string name="menu_string">Фильмы</string>
    <string name="settings">Настройки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Поиск</string>
    <string name="new_movies">Новинки</string>
    <string name="rated_movies">Популярные сейчас</string>
    <string name="rated_movies_cat3">Фильмы категории 3</string>
    <string name="rated_movies_cat2">Фильмы категории 2</string>
    <string name="rated_movies_cat1">Фильмы категории 1</string>
    <string name="searchFragment">Search</string>
    <string name="profileFragment">Profile</string>
    <string name="favoriteFragment">Favorite</string>
    <string name="ng_name_home">Главная</string>
    <string name="ng_name_search">Поиск</string>
    <string name="ng_name_fav">Избранные</string>
    <string name="ng_name_settings">Настройки</string>
    <string name="ng_name_movies_cat">Фильмы по жанру</string>
    <string name="ng_name_item_movie">Инфо о фильме</string>
    <string name="ErrorMsg">Error!</string>
    <string name="ReloadMsg">Reload?</string>
    <string name="openBr">\" (\"</string>
    <string name="closeBr">)</string>
    <string name="titleMovie">%1$s (%2$s)</string>
    <string name="comma">%1$s, %2$s</string>
    <string name="Minutes">" min."</string>
    <string name="adult">Adult</string>
    <string name="MovieNoteHeader">Мои заметки:</string>
    <string name="ok">OK</string>
    <string name="favorite">Избранные</string>
    <string name="settingsAdult">Adult</string>
    <string name="contacts">Контакты</string>
    <string name="withPhone">С телефонами</string>
    <string name="withPhoneShared">withPhone</string>
    <string name="accessContact">Доступ к контактам</string>
    <string name="reasonContact">Объяснение</string>
    <string name="setAccessContact">Предоставить доступ</string>
    <string name="noAccess">Не надо</string>
    <string name="setAccessCall">Предоставить доступ</string>
    <string name="reasonCall">Объяснение</string>
    <string name="accsessToCall">Доступ к звонкам</string>
    <string name="Credits">Полный актёрский и съёмочный состав:</string>
    <string name="Acters">Актёры:</string>
    <string name="ActerName">Имя</string>
    <string name="ActerRole">Роль</string>
    <string name="CrewPers">Съёмочный персонал:</string>
    <string name="nameCrew">Имя</string>
    <string name="crewRole">Должность</string>
    <string name="person_image">person image</string>
    <string name="InTrends">В трендах:</string>
    <string name="Cinema">Кинотеатры Ульяновска:</string>
    <string name="Person">Персона</string>
    <string name="Maps">Место рождения актёра</string>
    <string name="CurrentPosition">Моё местоположение</string>
    <string name="Near">\"Вы рядом с \"</string>
    <string name="EnterGoeFence">Вход в ГеоЗону</string>
    <string name="ExitGoeFence">Выход из ГеоЗоны</string>
    <string name="DwellGoeFence">Внутри ГеоЗоны</string>
    <string name="UnknowGoeFence">Неизвестно</string>
    <string name="geoFenceShared">GeoFence</string>
    <string name="GeoFence">ГеоЗоны</string>
    <string name="MessagesFAB">Сообщения</string>
    <string name="Messages">Сообщения</string>
</resources>