<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_trends"
        android:icon="@drawable/ic_new_24"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_genres"
        android:icon="@drawable/ic_categories_24"
        android:title="@string/categories" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_fav_24"
        android:title="@string/favorite" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings" />
</menu>