<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.filmlibrary.view.movies.MainFragment"
        android:label="@string/ng_name_home"
        tools:layout="@layout/main_fragment">
        <action
            android:id="@+id/action_navigation_home_to_moviesByCategoryFragment"
            app:destination="@id/moviesByCategoryFragment" />
        <action
            android:id="@+id/action_navigation_home_to_movieInfoFragment"
            app:destination="@id/movieInfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.android.filmlibrary.view.search.SearchFragment"
        android:label="@string/ng_name_search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.android.filmlibrary.view.favorite.FavoriteFragment"
        android:label="@string/ng_name_fav"
        tools:layout="@layout/favorite_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.android.filmlibrary.view.profile.ProfileFragment"
        android:label="@string/ng_name_profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/moviesByCategoryFragment"
        android:name="com.android.filmlibrary.view.moviesbycategory.MoviesByCategoryFragment"
        android:label="@string/ng_name_movies_cat"
        tools:layout="@layout/movies_by_category_fragment">
        <action
            android:id="@+id/action_moviesByCategoryFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_moviesByCategoryFragment_to_movieInfoFragment"
            app:destination="@id/movieInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieInfoFragment"
        android:name="com.android.filmlibrary.view.itemmovie.MovieInfoFragment"
        android:label="@string/ng_name_item_movie"
        tools:layout="@layout/fragment_movie_info">
        <action
            android:id="@+id/action_movieInfoFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_movieInfoFragment_to_moviesByCategoryFragment"
            app:destination="@id/moviesByCategoryFragment" />
    </fragment>

</navigation>