<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.itemmovie.MovieInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageMovie"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:contentDescription="@string/imagemovie"
                app:layout_constraintEnd_toStartOf="@+id/movieNoteHeader"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/empty_poster" />

            <ImageButton
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/favorite"
                android:src="@drawable/ic_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="@+id/movieNoteHeader"
                app:layout_constraintEnd_toEndOf="@+id/movieNoteHeader"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toStartOf="@+id/movieNoteHeader"
                app:layout_constraintTop_toTopOf="@+id/movieNoteHeader"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/movieNoteHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/MovieNoteHeader"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/movieNote"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageMovie"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/movieNote"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints="@string/MovieNoteHeader"
                android:gravity="start"
                android:inputType="text"
                android:labelFor="@id/movieNoteHeader"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/button_ok"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageMovie"
                app:layout_constraintTop_toBottomOf="@+id/movieNoteHeader"
                tools:ignore="LabelFor"
                tools:text="Любопытное кинцо" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/find"
                android:src="@drawable/ic_delete_note_24"
                app:layout_constraintBottom_toBottomOf="@+id/movieNoteHeader"
                app:layout_constraintEnd_toEndOf="@+id/movieNoteHeader"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/movieNoteHeader"
                app:layout_constraintTop_toTopOf="@+id/movieNoteHeader"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                app:layout_constraintBottom_toTopOf="@+id/titleMovie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageMovie"
                app:layout_constraintTop_toBottomOf="@+id/movieNote" />

            <TextView
                android:id="@+id/rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFC107"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageMovie"
                app:layout_constraintEnd_toEndOf="@+id/imageMovie"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/imageMovie"
                app:layout_constraintTop_toTopOf="@+id/imageMovie"
                app:layout_constraintVertical_bias="0.0"
                tools:text="7.5" />

            <TextView
                android:id="@+id/titleMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageMovie"
                tools:text="巨乳お姉さんの濡れパイ誘惑に逆らえない 君島みお" />

            <TextView
                android:id="@+id/yearMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/runtimeMovie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleMovie"
                tools:text="1995" />

            <TextView
                android:id="@+id/runtimeMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/yearMovie"
                app:layout_constraintTop_toBottomOf="@+id/titleMovie"
                tools:text="129 мин" />

            <ProgressBar
                android:id="@+id/progressBarRuntime"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/runtimeMovie"
                app:layout_constraintEnd_toEndOf="@+id/runtimeMovie"
                app:layout_constraintStart_toStartOf="@+id/runtimeMovie"
                app:layout_constraintTop_toTopOf="@+id/runtimeMovie" />

            <TextView
                android:id="@+id/countryMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yearMovie"
                tools:text="US" />

            <ProgressBar
                android:id="@+id/progressBarCountry"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/countryMovie"
                app:layout_constraintEnd_toEndOf="@+id/countryMovie"
                app:layout_constraintStart_toStartOf="@+id/countryMovie"
                app:layout_constraintTop_toTopOf="@+id/countryMovie" />

            <TextView
                android:id="@+id/genreMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countryMovie"
                tools:text="Комедия, Приключения" />

            <ProgressBar
                android:id="@+id/progressBarGenre"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/genreMovie"
                app:layout_constraintEnd_toEndOf="@+id/genreMovie"
                app:layout_constraintStart_toStartOf="@+id/genreMovie"
                app:layout_constraintTop_toTopOf="@+id/genreMovie" />

            <TextView
                android:id="@+id/descrMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="gravity"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/credits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genreMovie"
                tools:text="Mio Kimijima, a very popular busty sister, seduces a man by getting her beautiful big tits wet with indecent sweat! The air-conditioning is broken and it's hot in the office ... Sweaty sheer bra, nipples, and pantyhose with unevenness tempt you! Sweaty tongue sex with slimy fucking, plump ass job and greedy cock of strong men! Please enjoy plenty of shiny beautiful breasts and beautiful body, clothes x sheer erotic x sweaty x superb erotic body!" />

            <TextView
                android:id="@+id/credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Credits"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/cast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descrMovie"
                tools:text="Полный актёрский и съёмочный состав" />

            <ProgressBar
                android:id="@+id/progressBarCredits"
                style="?android:attr/progressBarStyleLargeInverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/crewTable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cast" />

            <TextView
                android:id="@+id/cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Acters"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/castTable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/credits"
                tools:text="Актёры:" />

            <TableLayout
                android:id="@+id/castTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/crew"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast">

                <TableRow tools:ignore="UselessParent">

                    <TextView
                        android:gravity="center"
                        android:text="@string/ActerName" />

                    <TextView
                        android:gravity="center"
                        android:text="@string/ActerRole" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CrewPers"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/crewTable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/castTable"
                tools:text="Съёмочный персонал:" />

            <TableLayout
                android:id="@+id/crewTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crew">

                <TableRow tools:ignore="UselessParent">

                    <TextView
                        android:gravity="center"
                        android:text="@string/nameCrew" />

                    <TextView
                        android:gravity="center"
                        android:text="@string/crewRole" />
                </TableRow>

            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>