<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.itemmovie.MovieInfoFragment">

    <ImageView
        android:id="@+id/imageMovie"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:contentDescription="@string/imagemovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/titleHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleHead"
        app:layout_constraintEnd_toStartOf="@+id/titleMovie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMovie" />

    <TextView
        android:id="@+id/titleMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleHead"
        app:layout_constraintTop_toBottomOf="@+id/imageMovie" />


    <TextView
        android:id="@+id/yearHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yearHead"
        app:layout_constraintEnd_toStartOf="@+id/yearMovie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMovie" />

    <TextView
        android:id="@+id/yearMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yearHead"
        app:layout_constraintTop_toBottomOf="@+id/titleMovie" />

    <TextView
        android:id="@+id/descrMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearHead" />

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>